<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/dialog_based_preferences">
        	
	    <EditTextPreference
	        android:key="phonenumber"
	        android:inputType="number"
	        android:title="@string/settings_phonenumber_title"
	        android:dialogTitle="@string/settings_phonenumber_title"
	        android:dialogMessage="@string/settings_phonenumber_dialogMessage"
	        android:summary="@string/settings_phonenumber_summary"
	        android:persistent="true" />
	    
	    <EditTextPreference
	        android:key="timeout"
	        android:inputType="number"
	        android:title="@string/settings_timeout_title"
	        android:dialogTitle="@string/settings_timeout_title"
	        android:dialogMessage="@string/settings_timeout_dialogMessage"
	        android:summary="@string/settings_timeout_summary"
	        android:defaultValue="20"/>
	    
	    <EditTextPreference
	        android:key="smsnumber"
	        android:inputType="number"
	        android:title="@string/settings_quantity_title"
	        android:dialogTitle="@string/settings_quantity_title"
	        android:dialogMessage="@string/settings_quantity_dialogMessage"
	        android:summary="@string/settings_quantity_summary"
	        android:defaultValue="245"/>
    </PreferenceCategory>
</PreferenceScreen>